--- a/gallery.html
+++ b/gallery.html
@@ -50,92 +50,92 @@
             <div class="row">
                <div class="col-4">
                   <div class="galleryImage">
-                     <img src="ImagesForAbelsGallery/Portrait8_x.JPG" class="img-fluid" alt="Architectural City Chicago">
+                     <img src="Portrait8_x.JPG" class="img-fluid" alt="Architectural City Chicago">
                   </div>
                   <div class="galleryImage">
-                     <img src="ImagesForAbelsGallery/Portrait10_y.JPG" class="img-fluid" alt="Portrait 5">
+                     <img src="Portrait10_y.JPG" class="img-fluid" alt="Portrait 5">
                   </div>
                   <div class="galleryImage">
-                     <img src="ImagesForAbelsGallery/Event_Band_x.JPG" class="img-fluid" alt="Architectural City Chicago">
+                     <img src="Event_Band_x.JPG" class="img-fluid" alt="Architectural City Chicago">
                   </div>
                   <div class="galleryImage">
-                     <img src="ImagesForAbelsGallery/Portrait2_y.jpg" class="img-fluid" alt="Portrait 5">
+                     <img src="Portrait2_y.jpg" class="img-fluid" alt="Portrait 5">
                   </div>
                   <div class="galleryImage">
-                     <img src="ImagesForAbelsGallery/Event_Uni_Cultural_x.jpg" class="img-fluid" alt="Portrait 2">
+                     <img src="Event_Uni_Cultural_x.jpg" class="img-fluid" alt="Portrait 2">
                   </div>                    
                   <div class="galleryImage">
-                     <img src="ImagesForAbelsGallery/Nature_Sunset_y.JPG" class="img-fluid" alt="Portrait 2">
+                     <img src="Nature_Sunset_y.JPG" class="img-fluid" alt="Portrait 2">
                   </div>   
                   <div class="galleryImage">
-                     <img src="ImagesForAbelsGallery/SPV_Campaign3_y.jpg" class="img-fluid" alt="Portrait 5">
+                     <img src="SPV_Campaign3_y.jpg" class="img-fluid" alt="Portrait 5">
                   </div>  
                   <div class="galleryImage">
-                     <img src="ImagesForAbelsGallery/Grad_Portrait6_y.jpg" class="img-fluid" alt="Portrait 5">
+                     <img src="Grad_Portrait6_y.jpg" class="img-fluid" alt="Portrait 5">
                   </div>  
                   <div class="galleryImage">
-                     <img src="ImagesForAbelsGallery/Event_Sport_Soccer_y.jpg" class="img-fluid" alt="Portrait 5">
+                     <img src="Event_Sport_Soccer_y.jpg" class="img-fluid" alt="Portrait 5">
                   </div>  
                   <div class="galleryImage">
-                     <img src="ImagesForAbelsGallery/Event_Sport_Baseball_y.JPG" class="img-fluid" alt="Portrait 5">
+                     <img src="Event_Sport_Baseball_y.JPG" class="img-fluid" alt="Portrait 5">
                   </div>  
                </div>
                <div class="col-4 middleColumn">
                   <div class="galleryImage">
-                     <img src="ImagesForAbelsGallery/Portrait1_y.JPG" class="img-fluid" alt="Portrait 5">
+                     <img src="Portrait1_y.JPG" class="img-fluid" alt="Portrait 5">
                   </div>
                   <div class="galleryImage">
-                     <img src="ImagesForAbelsGallery/Event_Sport_Cheer_x.JPG" class="img-fluid" alt="Architectural City Chicago">
+                     <img src="Event_Sport_Cheer_x.JPG" class="img-fluid" alt="Architectural City Chicago">
                   </div>
                   <div class="galleryImage">
-                     <img src="ImagesForAbelsGallery/Portrait3_y.JPG" class="img-fluid" alt="Portrait 5">
+                     <img src="Portrait3_y.JPG" class="img-fluid" alt="Portrait 5">
                   </div>
                    <div class="galleryImage">
-                     <img src="ImagesForAbelsGallery/architectural_Church_x.jpg" class="img-fluid" alt="Portrait 2">
+                     <img src="architectural_Church_x.jpg" class="img-fluid" alt="Portrait 2">
                   </div>
                   <div class="galleryImage">
-                     <img src="ImagesForAbelsGallery/Portrait5_y.JPG" class="img-fluid" alt="Portrait 5">
+                     <img src="Portrait5_y.JPG" class="img-fluid" alt="Portrait 5">
                   </div> 
                   <div class="galleryImage">
-                     <img src="ImagesForAbelsGallery/SPV_Campaign2_y.jpg" class="img-fluid" alt="Portrait 5">
+                     <img src="SPV_Campaign2_y.jpg" class="img-fluid" alt="Portrait 5">
                   </div>  
                   <div class="galleryImage">
-                     <img src="ImagesForAbelsGallery/Grad_Portrait7_y.jpg" class="img-fluid" alt="Portrait 5">
+                     <img src="Grad_Portrait7_y.jpg" class="img-fluid" alt="Portrait 5">
                   </div>
                   <div class="galleryImage">
-                     <img src="ImagesForAbelsGallery/Event_Prom_Couple_y.JPG" class="img-fluid" alt="Portrait 5">
+                     <img src="Event_Prom_Couple_y.JPG" class="img-fluid" alt="Portrait 5">
                   </div>   
                   <div class="galleryImage">
-                     <img src="ImagesForAbelsGallery/architectural_City_Chicago1_y.JPG" class="img-fluid" alt="Portrait 5">
+                     <img src="architectural_City_Chicago1_y.JPG" class="img-fluid" alt="Portrait 5">
                   </div>            
                </div>
                <div class="col-4">
                   <div class="galleryImage">
-                     <img src="ImagesForAbelsGallery/Event_Uni_Candid1_x.JPG" class="img-fluid" alt="Portrait 2">
+                     <img src="Event_Uni_Candid1_x.JPG" class="img-fluid" alt="Portrait 2">
                   </div>
                   <div class="galleryImage">
-                     <img src="ImagesForAbelsGallery/Portrait11_y.jpg" class="img-fluid" alt="Portrait 5">
+                     <img src="Portrait11_y.jpg" class="img-fluid" alt="Portrait 5">
                   </div>
                    <div class="galleryImage">
-                     <img src="ImagesForAbelsGallery/Family_Portrait13_x.JPG" class="img-fluid" alt="Portrait 2">
+                     <img src="Family_Portrait13_x.JPG" class="img-fluid" alt="Portrait 2">
                   </div>
                   <div class="galleryImage">
-                     <img src="ImagesForAbelsGallery/Portrait4_y.JPG" class="img-fluid" alt="Portrait 5">
+                     <img src="Portrait4_y.JPG" class="img-fluid" alt="Portrait 5">
                   </div>
                   <div class="galleryImage">
-                     <img src="ImagesForAbelsGallery/Portrait9_y.JPG" class="img-fluid" alt="Portrait 5">
+                     <img src="Portrait9_y.JPG" class="img-fluid" alt="Portrait 5">
                   </div>   
                   <div class="galleryImage">
-                     <img src="ImagesForAbelsGallery/SPV_Campaign1_y.jpg" class="img-fluid" alt="Portrait 5">
+                     <img src="SPV_Campaign1_y.jpg" class="img-fluid" alt="Portrait 5">
                   </div>  
                   <div class="galleryImage">
-                     <img src="ImagesForAbelsGallery/Macro_Food_Honey_y.JPG" class="img-fluid" alt="Portrait 5">
+                     <img src="Macro_Food_Honey_y.JPG" class="img-fluid" alt="Portrait 5">
                   </div>   
                   <div class="galleryImage">
-                     <img src="ImagesForAbelsGallery/Couple_Portrait12_y.jpg" class="img-fluid" alt="Portrait 5">
+                     <img src="Couple_Portrait12_y.jpg" class="img-fluid" alt="Portrait 5">
                   </div>  
                   <div class="galleryImage">
-                     <img src="ImagesForAbelsGallery/Macro_Food_Strawberry_y.JPG" class="img-fluid" alt="Portrait 5">
+                     <img src="Macro_Food_Strawberry_y.JPG" class="img-fluid" alt="Portrait 5">
                   </div>  
                </div>
             </div>
