--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
             <div id="carouselExampleFade" class="carousel slide carousel-fade">
               <div class="carousel-inner">
                   <div class="carousel-item active">
-                     <img src="ImagesForAbelsGallery/architectural_City_Chicago1_y.JPG" class="d-block w-100" alt="...">
+                     <img src="architectural_City_Chicago1_y.JPG" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                     <img src="ImagesForAbelsGallery/Portrait5_y.JPG" class="d-block w-100" alt="...">
+                     <img src="Portrait5_y.JPG" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                     <img src="ImagesForAbelsGallery/Portrait2_y.jpg" class="d-block w-100" alt="...">
+                     <img src="Portrait2_y.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                     <img src="ImagesForAbelsGallery/Portrait3_y.jpg" class="d-block w-100" alt="...">
+                     <img src="Portrait3_y.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                        <img src="ImagesForAbelsGallery/SPV_Campaign1_y.jpg" class="d-block w-100" alt="...">
+                        <img src="SPV_Campaign1_y.jpg" class="d-block w-100" alt="...">
                   </div>
                   <button class="carousel-control-prev button-featured-next" type="button"  data-bs-target="#carouselExampleFade" data-bs-slide="prev">
                      <i class="bi bi-chevron-compact-left"></i>
