--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
             <div class="row aboutContentContainer">
                <div class="col-5">
                   <div class="aboutContent">
-                  <img src="ImagesForAbelsGallery/Abel_PFP_y.JPG" class="img-fluid" alt="Portrait Image">
+                  <img src="Abel_PFP_y.JPG" class="img-fluid" alt="Portrait Image">
                   </div>
                </div>
                <div class="col-5 ">
@@ -72,4 +72,5 @@
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
    
    </body>
+
 </html>
