--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                      <img src="Portrait2_y.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                     <img src="Portrait3_y.jpg" class="d-block w-100" alt="...">
+                     <img src="Portrait3_y.JPG" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
                         <img src="SPV_Campaign1_y.jpg" class="d-block w-100" alt="...">
@@ -80,4 +80,5 @@
    </div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
    </body>
+
 </html>
