--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
                </div>
                <div class="col-5 ">
                   <div class="aboutContent">
-                  <h1 class="Heading">Abell Ovalle</h1>
+                  <h1 class="Heading">Abel Ovalle</h1>
                   <p>Hi, my name is Abel Ovalle! I'm a photographer located in the San Antonio
                      area. I am currently a student at Texas Lutheran University pursuing a nursing
                      degree. I have been taking pictures for about 6 years now, and I have found a
@@ -74,3 +74,4 @@
    </body>
 
 </html>
+
