--- a/about.html
+++ b/about.html
@@ -69,9 +69,15 @@
          </div>
       </div>
    </div>
+   
+   <!-- Load jQuery first to prevent "uncaughtReference error" (load first to be able to use jQuery library in other js files)-->
+   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+   
+   <!-- Load bootstrap second -->
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
    
+   <!-- Load custome JS files last -->
+   <script src="navIconLogic.js" type="text/javascript"></script>
+   
    </body>
-
 </html>
-
