--- a/contact.html
+++ b/contact.html
@@ -60,12 +60,20 @@
       </div>
     </div>
   </div>
+  <!-- Load JS files in order of importance for functionality -->
+  <!-- Load jQuery first to prevent "uncaughtReference error" (load first to be able to use jQuery library in other js files)-->
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+   
+  <!-- Load bootstrap second -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+   
+  <!-- Calendly JS-->
+  <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+
+  <!-- Load custome JS files last -->
+  <script src="navIconLogic.js" type="text/javascript"></script>
   
-    <!-- Calendly JS-->
-    <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
-    <!-- Bootstrap JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  </body>
+</body>
 
 </html>       
        
