--- a/gallery.html
+++ b/gallery.html
@@ -160,9 +160,15 @@
             </button>
          </div> 
 
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-   <script src="script.js" type="text/javascript"></script>
+   <!-- Load jQuery first to prevent "uncaughtReference error" (load first to be able to use jQuery library in other js files)-->
+   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+   
+   <!-- Load bootstrap second -->
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-      
+
+   <!-- Load custom JS files last -->
+   <script src="navIconLogic.js" type="text/javascript"></script>
+   <script src="galleryLogic.js" type="text/javascript"></script>  
+    
    </body>
 </html>
