--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                <div class="socialMedia"> <!-- FIX ICONS AND MAKE LOOK NEET -->
                   <button class="bi bi-envelope-at icons" data-bs-toggle="collapse" data-bs-target="#iconEmail" aria-expanded="false" aria-controls="button1"></button>
                   <div style="min-height: 0px; max-width: 300px;">
-                     <div class="collapse collapse-horizontal" id="iconEmail">
+                     <div class="collapse collapse" id="iconEmail">
                         <div class="card card-body" style="width: 200px; align-items: center;">
                            Abelovalle45@gmail.com
                         </div>
@@ -35,7 +35,7 @@
                   </div>
                   <button class="bi bi-telephone-inbound icons" data-bs-toggle="collapse" data-bs-target="#iconPhone" aria-expanded="false" aria-controls="collapseWidthExample"></button>
                   <div style="min-height: 0px; max-width: 300px;">
-                     <div class="collapse collapse-horizontal" id="iconPhone">
+                     <div class="collapse collapse" id="iconPhone">
                         <div class="card card-body" style="width: 150px; align-items: center;">
                            (210) 847-1786
                         </div>
@@ -78,7 +78,15 @@
          </div>
       </div>
    </div>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-   </body>
 
+   <!-- Load jQuery first to prevent "uncaughtReference error" (load first to be able to use jQuery library in other js files)-->
+   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+   
+   <!-- Load bootstrap second -->
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+   
+   <!-- Load custome JS files last -->
+   <script src="navIconLogic.js" type="text/javascript"></script>
+
+   </body>
 </html>
