--- a/contact.html
+++ b/contact.html
@@ -41,16 +41,19 @@
                 </div>
               </div>
             </div>
-            <button class="icons"> <a href="https://www.instagram.com/just_take_the_photo45/" target="_blank" class="bi bi-instagram"></a></button>
+            <button class="bi bi-instagram icons"> <a href="https://www.instagram.com/just_take_the_photo45/" target="_blank"></a></button>
           </div>
         </div>
       </div> <!-- End of Navigation Bar -->
 
       <div class="contactContainer col-10">
-        <div class="col-12 contactContentContainer">
+        <div class="col-12 contactContentContainer-flex">
           <div class= "aboutContent">
             <h1>Contact Form!</h1>
-            <h6>Please fill out the form below to schedule an appointment!</h6>
+            <p> This is where you can make an appointment for a photo shoot, but please feel free to contact me before filling the form! I would love to hear about the occasion,
+              whether it be just for fun and memories or for milestones! Contanct info is on the bottom left
+              panel, look for the email and phone icons and click!
+            </p>
           </div>
             <!-- Calendly inline widget begin -->
             <div class="calendly-inline-widget" data-url="https://calendly.com/testaccfrog?hide_landing_page_details=1"></div>
