--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         </div>
                      </div>
                   </div>
-                  <button class="icons"> <a href="https://www.instagram.com/just_take_the_photo45/" target="_blank" class="bi bi-instagram"></a></button>
+                  <button class="bi bi-instagram icons"> <a href="https://www.instagram.com/just_take_the_photo45/" target="_blank" ></a></button>
                </div>
             </div>
          </div> <!-- End of Navigation Bar -->
