--- a/about.html
+++ b/about.html
@@ -46,15 +46,9 @@
             </div>
          </div> <!-- End of Navigation Bar -->
 
-         <div class="col-10">
-            <div class="row aboutContentContainer">
-               <div class="col-5">
-                  <div class="aboutContent">
-                  <img src="Abel_PFP_y.JPG" class="img-fluid" alt="Portrait Image">
-                  </div>
-               </div>
-               <div class="col-5 ">
-                  <div class="aboutContent">
+         <div class="col-10 centerAbout">
+            <div class="aboutContentContainer">
+               <div class="aboutContent">
                   <h1 class="Heading">Abel Ovalle</h1>
                   <p>Hi, my name is Abel Ovalle! I'm a photographer located in the San Antonio
                      area. I am currently a student at Texas Lutheran University pursuing a nursing
@@ -63,8 +57,8 @@
                      a lens and have managed to capture such beautiful moments. I hope I can capture
                      your moments the same way I have learned to capture mine!
                   </p>
-                  </div>
                </div>
+               <img src="Abel_PFP_y.JPG" class="img-fluid aboutPFP" alt="Portrait Image">
             </div>
          </div>
       </div>
