--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
 
       <div class="contactContainer col-10">
         <div class="col-12 contactContentContainer-flex">
-          <div class= "aboutContent">
+          <div class= "contactContent">
             <h1>Contact Form!</h1>
             <p> This is where you can make an appointment for a photo shoot, but please feel free to contact me before filling the form! I would love to hear about the occasion,
               whether it be just for fun and memories or for milestones! Contanct info is on the bottom left
