--- a/index.html
+++ b/index.html
@@ -12,71 +12,179 @@
 
    <body>
    
-     <div class="container-fluid">
-      <div class="row">
-         <!--Main Navigation Bar-->
-         <div class="navSideContainer col-2">  
-            <div class="navSide">
-               <div class="logo">
-                  <a href="index.html">Abel's Gallery</a>
-               </div>
-               <a href="index.html">Home</a>
-               <a href="gallery.html">Gallery</a>
-               <a href="contact.html">Contact</a>
-               <a href="about.html">About</a>
-               <div class="socialMedia"> <!-- FIX ICONS AND MAKE LOOK NEET -->
-                  <button class="bi bi-envelope-at icons" data-bs-toggle="collapse" data-bs-target="#iconEmail" aria-expanded="false" aria-controls="button1"></button>
-                  <div style="min-height: 0px; max-width: 300px;">
-                     <div class="collapse collapse" id="iconEmail">
-                        <div class="card card-body" style="width: 200px; align-items: center;">
-                           Abelovalle45@gmail.com
-                        </div>
-                     </div>
-                  </div>
-                  <button class="bi bi-telephone-inbound icons" data-bs-toggle="collapse" data-bs-target="#iconPhone" aria-expanded="false" aria-controls="collapseWidthExample"></button>
-                  <div style="min-height: 0px; max-width: 300px;">
-                     <div class="collapse collapse" id="iconPhone">
-                        <div class="card card-body" style="width: 150px; align-items: center;">
-                           (210) 847-1786
-                        </div>
-                     </div>
-                  </div>
-                  <button class="bi bi-instagram icons"> <a href="https://www.instagram.com/just_take_the_photo45/" target="_blank" ></a></button>
-               </div>
-            </div>
-         </div> <!-- End of Navigation Bar -->
+   <div class="container-fluid">
 
-         <div class="featuredContainer col-10">
-            <div id="carouselExampleFade" class="carousel slide carousel-fade">
-              <div class="carousel-inner">
-                  <div class="carousel-item active">
-                     <img src="architectural_City_Chicago1_y.JPG" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                     <img src="Portrait5_y.JPG" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                     <img src="Portrait2_y.jpg" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                     <img src="Portrait3_y.JPG" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                        <img src="SPV_Campaign1_y.jpg" class="d-block w-100" alt="...">
-                  </div>
-                  <button class="carousel-control-prev button-featured-next" type="button"  data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-                     <i class="bi bi-chevron-compact-left"></i>
-                     <span class="visually-hidden">Previous</span>
-                  </button>
-                  <button class="carousel-control-next button-featured-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-                     <i class="bi bi-chevron-compact-right"></i>
-                     <span class="visually-hidden">Next</span>
-                  </button>
+      <div class="homeBackground">
+         <div id="carouselExampleFade" class="carousel slide carousel-fade">
+            <div class="carousel-inner">
+               <div class="carousel-item active">
+                     <!--Main Navigation Bar-->
+                  <div class="homeNav">
+                     <div class="logo">
+                        <a href="index.html">Abel's Gallery</a>
+                     </div>
+                     <a href="index.html">Home</a>
+                     <a href="gallery.html">Gallery</a>
+                     <a href="contact.html">Contact</a>
+                     <a href="about.html">About</a>
+                     <div class="socialMedia"> <!-- FIX ICONS AND MAKE LOOK NEET -->
+                        <button class="bi bi-envelope-at icons" data-bs-toggle="collapse" data-bs-target="#iconEmail" aria-expanded="false" aria-controls="button1"></button>
+                        <div style="min-height: 0px; max-width: 300px;">
+                           <div class="collapse collapse" id="iconEmail">
+                              <div class="card card-body" style="width: 200px; align-items: center;">
+                                 Abelovalle45@gmail.com
+                              </div>
+                           </div>
+                        </div>
+                        <button class="bi bi-telephone-inbound icons" data-bs-toggle="collapse" data-bs-target="#iconPhone" aria-expanded="false" aria-controls="collapseWidthExample"></button>
+                        <div style="min-height: 0px; max-width: 300px;">
+                           <div class="collapse collapse" id="iconPhone">
+                              <div class="card card-body" style="width: 150px; align-items: center;">
+                                 (210) 847-1786
+                              </div>
+                           </div>
+                        </div>
+                        <button class="bi bi-instagram icons"> <a href="https://www.instagram.com/just_take_the_photo45/" target="_blank" ></a></button>
+                     </div>
+                  </div> <!-- End of Navigation Bar -->
+                  <img src="architectural_City_Chicago1_y.JPG" class="d-block w-100" alt="...">
                </div>
+               <div class="carousel-item">
+                  <div class="homeNav">
+                     <div class="logo">
+                        <a href="index.html">Abel's Gallery</a>
+                     </div>
+                     <a href="index.html">Home</a>
+                     <a href="gallery.html">Gallery</a>
+                     <a href="contact.html">Contact</a>
+                     <a href="about.html">About</a>
+                     <div class="socialMedia"> <!-- FIX ICONS AND MAKE LOOK NEET -->
+                        <button class="bi bi-envelope-at icons" data-bs-toggle="collapse" data-bs-target="#iconEmail" aria-expanded="false" aria-controls="button1"></button>
+                        <div style="min-height: 0px; max-width: 300px;">
+                           <div class="collapse collapse" id="iconEmail">
+                              <div class="card card-body" style="width: 200px; align-items: center;">
+                                 Abelovalle45@gmail.com
+                              </div>
+                           </div>
+                        </div>
+                        <button class="bi bi-telephone-inbound icons" data-bs-toggle="collapse" data-bs-target="#iconPhone" aria-expanded="false" aria-controls="collapseWidthExample"></button>
+                        <div style="min-height: 0px; max-width: 300px;">
+                           <div class="collapse collapse" id="iconPhone">
+                              <div class="card card-body" style="width: 150px; align-items: center;">
+                                 (210) 847-1786
+                              </div>
+                           </div>
+                        </div>
+                        <button class="bi bi-instagram icons"> <a href="https://www.instagram.com/just_take_the_photo45/" target="_blank" ></a></button>
+                     </div>
+                  </div> <!-- End of Navigation Bar -->
+                  <img src="Portrait5_y.JPG" class="d-block w-100" alt="...">
+               </div>
+               <div class="carousel-item">
+                  <div class="homeNav">
+                     <div class="logo">
+                        <a href="index.html">Abel's Gallery</a>
+                     </div>
+                     <a href="index.html">Home</a>
+                     <a href="gallery.html">Gallery</a>
+                     <a href="contact.html">Contact</a>
+                     <a href="about.html">About</a>
+                     <div class="socialMedia"> <!-- FIX ICONS AND MAKE LOOK NEET -->
+                        <button class="bi bi-envelope-at icons" data-bs-toggle="collapse" data-bs-target="#iconEmail" aria-expanded="false" aria-controls="button1"></button>
+                        <div style="min-height: 0px; max-width: 300px;">
+                           <div class="collapse collapse" id="iconEmail">
+                              <div class="card card-body" style="width: 200px; align-items: center;">
+                                 Abelovalle45@gmail.com
+                              </div>
+                           </div>
+                        </div>
+                        <button class="bi bi-telephone-inbound icons" data-bs-toggle="collapse" data-bs-target="#iconPhone" aria-expanded="false" aria-controls="collapseWidthExample"></button>
+                        <div style="min-height: 0px; max-width: 300px;">
+                           <div class="collapse collapse" id="iconPhone">
+                              <div class="card card-body" style="width: 150px; align-items: center;">
+                                 (210) 847-1786
+                              </div>
+                           </div>
+                        </div>
+                        <button class="bi bi-instagram icons"> <a href="https://www.instagram.com/just_take_the_photo45/" target="_blank" ></a></button>
+                     </div>
+                  </div> <!-- End of Navigation Bar -->
+                  <img src="Portrait2_y.jpg" class="d-block w-100" alt="...">
+               </div>
+               <div class="carousel-item">
+                  <div class="homeNav">
+                     <div class="logo">
+                        <a href="index.html">Abel's Gallery</a>
+                     </div>
+                     <a href="index.html">Home</a>
+                     <a href="gallery.html">Gallery</a>
+                     <a href="contact.html">Contact</a>
+                     <a href="about.html">About</a>
+                     <div class="socialMedia"> <!-- FIX ICONS AND MAKE LOOK NEET -->
+                        <button class="bi bi-envelope-at icons" data-bs-toggle="collapse" data-bs-target="#iconEmail" aria-expanded="false" aria-controls="button1"></button>
+                        <div style="min-height: 0px; max-width: 300px;">
+                           <div class="collapse collapse" id="iconEmail">
+                              <div class="card card-body" style="width: 200px; align-items: center;">
+                                 Abelovalle45@gmail.com
+                              </div>
+                           </div>
+                        </div>
+                        <button class="bi bi-telephone-inbound icons" data-bs-toggle="collapse" data-bs-target="#iconPhone" aria-expanded="false" aria-controls="collapseWidthExample"></button>
+                        <div style="min-height: 0px; max-width: 300px;">
+                           <div class="collapse collapse" id="iconPhone">
+                              <div class="card card-body" style="width: 150px; align-items: center;">
+                                 (210) 847-1786
+                              </div>
+                           </div>
+                        </div>
+                        <button class="bi bi-instagram icons"> <a href="https://www.instagram.com/just_take_the_photo45/" target="_blank" ></a></button>
+                     </div>
+                  </div> <!-- End of Navigation Bar -->
+                  <img src="Portrait3_y.JPG" class="d-block w-100" alt="...">
+               </div>
+               <div class="carousel-item">
+                  <div class="homeNav">
+                     <div class="logo">
+                        <a href="index.html">Abel's Gallery</a>
+                     </div>
+                     <a href="index.html">Home</a>
+                     <a href="gallery.html">Gallery</a>
+                     <a href="contact.html">Contact</a>
+                     <a href="about.html">About</a>
+                     <div class="socialMedia"> <!-- FIX ICONS AND MAKE LOOK NEET -->
+                        <button class="bi bi-envelope-at icons" data-bs-toggle="collapse" data-bs-target="#iconEmail" aria-expanded="false" aria-controls="button1"></button>
+                        <div style="min-height: 0px; max-width: 300px;">
+                           <div class="collapse collapse" id="iconEmail">
+                              <div class="card card-body" style="width: 200px; align-items: center;">
+                                 Abelovalle45@gmail.com
+                              </div>
+                           </div>
+                        </div>
+                        <button class="bi bi-telephone-inbound icons" data-bs-toggle="collapse" data-bs-target="#iconPhone" aria-expanded="false" aria-controls="collapseWidthExample"></button>
+                        <div style="min-height: 0px; max-width: 300px;">
+                           <div class="collapse collapse" id="iconPhone">
+                              <div class="card card-body" style="width: 150px; align-items: center;">
+                                 (210) 847-1786
+                              </div>
+                           </div>
+                        </div>
+                        <button class="bi bi-instagram icons"> <a href="https://www.instagram.com/just_take_the_photo45/" target="_blank" ></a></button>
+                     </div>
+                  </div> <!-- End of Navigation Bar -->
+                  <img src="SPV_Campaign1_y.jpg" class="d-block w-100" alt="...">
+               </div>
+               <button class="carousel-control-prev button-featured-next" type="button"  data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+                  <i class="bi bi-chevron-compact-left"></i>
+                  <span class="visually-hidden">Previous</span>
+               </button>
+               <button class="carousel-control-next button-featured-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+                  <i class="bi bi-chevron-compact-right"></i>
+                  <span class="visually-hidden">Next</span>
+               </button>
             </div>
-            
          </div>
       </div>
+
    </div>
 
    <!-- Load jQuery first to prevent "uncaughtReference error" (load first to be able to use jQuery library in other js files)-->
