--- a/gallery.html
+++ b/gallery.html
@@ -12,39 +12,39 @@
    
    <body>
    
-   <div class="container-fluid"> 
-      <div class="row ">
-         <!-- Main Navigation Bar -->
-         <div class="navSideContainer col-2">  
-            <div class="navSide">
-               <div class="logo">
-                  <a href="index.html">Abel's Gallery</a>
-               </div>
-               <a href="index.html">Home</a>
-               <a href="gallery.html">Gallery</a>
-               <a href="contact.html">Contact</a>
-               <a href="about.html">About</a>
-               <div class="socialMedia"> <!-- FIX ICONS AND MAKE LOOK NEET -->
-                  <button class="bi bi-envelope-at icons" data-bs-toggle="collapse" data-bs-target="#iconEmail" aria-expanded="false" aria-controls="button1"></button>
-                  <div style="min-height: 0px; max-width: 300px;">
-                     <div class="collapse collapse-horizontal" id="iconEmail">
-                        <div class="card card-body" style="width: 200px; align-items: center;">
-                           Abelovalle45@gmail.com
-                        </div>
-                     </div>
+   <div class="container-fluid">
+    <div class="row">
+      <!--Main Nvaigation Bar--> 
+      <div class="navSideContainer col-2">
+        <div class="navSide">
+          <div class="logo">
+              <a href="index.html">Abel's Gallery</a>
+          </div>
+          <a href="index.html" class="nav-link">Home</a>
+          <a href="gallery.html" class="nav-link">Gallery</a>
+          <a href="contact.html" class="nav-link">Contact</a>
+          <a href="about.html" class="nav-link">About</a>
+          <div class="socialMedia"> <!-- FIX ICONS AND MAKE LOOK NEET -->
+            <button class="bi bi-envelope-at icons" data-bs-toggle="collapse" data-bs-target="#iconEmail" aria-expanded="false" aria-controls="button1"></button>
+            <div style="min-height: 0px; max-width: 300px;">
+                <div class="collapse collapse-horizontal" id="iconEmail">
+                  <div class="card card-body" style="width: 200px; align-items: center;">
+                      Abelovalle45@gmail.com
                   </div>
-                  <button class="bi bi-telephone-inbound icons" data-bs-toggle="collapse" data-bs-target="#iconPhone" aria-expanded="false" aria-controls="collapseWidthExample"></button>
-                  <div style="min-height: 0px; max-width: 300px;">
-                     <div class="collapse collapse-horizontal" id="iconPhone">
-                        <div class="card card-body" style="width: 150px; align-items: center;">
-                           (210) 847-1786
-                        </div>
-                     </div>
-                  </div>
-                  <button class="bi bi-instagram icons"> <a href="https://www.instagram.com/just_take_the_photo45/" target="_blank"></a></button>
-               </div>
+                </div>
             </div>
-         </div> <!-- End of Navigation Bar -->
+            <button class="bi bi-telephone-inbound icons" data-bs-toggle="collapse" data-bs-target="#iconPhone" aria-expanded="false" aria-controls="collapseWidthExample"></button>
+            <div style="min-height: 0px; max-width: 300px;">
+              <div class="collapse collapse-horizontal" id="iconPhone">
+                <div class="card card-body" style="width: 150px; align-items: center;">
+                    (210) 847-1786
+                </div>
+              </div>
+            </div>
+            <button class="bi bi-instagram icons"> <a href="https://www.instagram.com/just_take_the_photo45/" target="_blank"></a></button>
+          </div>
+        </div>
+      </div> <!-- End of Navigation Bar -->
 
          <div class="galleryContainer col-10 ">
             <div class="row">
