--- a/about.html
+++ b/about.html
@@ -20,10 +20,10 @@
                <div class="logo">
                   <a href="index.html">Abel's Gallery</a>
                </div>
-               <a href="index.html">Home</a>
-               <a href="gallery.html">Gallery</a>
-               <a href="contact.html">Contact</a>
-               <a href="about.html">About</a>
+               <a href="index.html" class="nav-link">Home</a>
+               <a href="gallery.html" class="nav-link">Gallery</a>
+               <a href="contact.html" class="nav-link">Contact</a>
+               <a href="about.html" class="nav-link">About</a>
                <div class="socialMedia"> <!-- FIX ICONS AND MAKE LOOK NEET -->
                   <button class="bi bi-envelope-at icons" data-bs-toggle="collapse" data-bs-target="#iconEmail" aria-expanded="false" aria-controls="button1"></button>
                   <div style="min-height: 0px; max-width: 300px;">
