--- a/contact.html
+++ b/contact.html
@@ -20,10 +20,10 @@
           <div class="logo">
               <a href="index.html">Abel's Gallery</a>
           </div>
-            <a href="index.html">Home</a>
-            <a href="gallery.html">Gallery</a>
-            <a href="contact.html">Contact</a>
-            <a href="about.html">About</a>
+          <a href="index.html" class="nav-link">Home</a>
+          <a href="gallery.html" class="nav-link">Gallery</a>
+          <a href="contact.html" class="nav-link">Contact</a>
+          <a href="about.html" class="nav-link">About</a>
           <div class="socialMedia"> <!-- FIX ICONS AND MAKE LOOK NEET -->
             <button class="bi bi-envelope-at icons" data-bs-toggle="collapse" data-bs-target="#iconEmail" aria-expanded="false" aria-controls="button1"></button>
             <div style="min-height: 0px; max-width: 300px;">
@@ -73,8 +73,8 @@
   <!-- Calendly JS-->
   <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
 
-  <!-- Load custome JS files last -->
-  <script src="navIconLogic.js" type="text/javascript"></script>
+   <!-- Load custome JS files last -->
+   <script src="navIconLogic.js" type="text/javascript"></script>
   
 </body>
 
