--- a/index.html
+++ b/index.html
@@ -18,160 +18,29 @@
          <div id="carouselExampleFade" class="carousel slide carousel-fade">
             <div class="carousel-inner">
                <div class="carousel-item active">
-                     <!--Main Navigation Bar-->
                   <div class="homeNav">
-                     <div class="logo">
-                        <a href="index.html">Abel's Gallery</a>
+                     <div class="homeLogo">
+                        <a href="gallery.html">Abel's Gallery</a>
                      </div>
-                     <a href="index.html">Home</a>
-                     <a href="gallery.html">Gallery</a>
-                     <a href="contact.html">Contact</a>
-                     <a href="about.html">About</a>
-                     <div class="socialMedia"> <!-- FIX ICONS AND MAKE LOOK NEET -->
-                        <button class="bi bi-envelope-at icons" data-bs-toggle="collapse" data-bs-target="#iconEmail" aria-expanded="false" aria-controls="button1"></button>
-                        <div style="min-height: 0px; max-width: 300px;">
-                           <div class="collapse collapse" id="iconEmail">
-                              <div class="card card-body" style="width: 200px; align-items: center;">
-                                 Abelovalle45@gmail.com
-                              </div>
-                           </div>
-                        </div>
-                        <button class="bi bi-telephone-inbound icons" data-bs-toggle="collapse" data-bs-target="#iconPhone" aria-expanded="false" aria-controls="collapseWidthExample"></button>
-                        <div style="min-height: 0px; max-width: 300px;">
-                           <div class="collapse collapse" id="iconPhone">
-                              <div class="card card-body" style="width: 150px; align-items: center;">
-                                 (210) 847-1786
-                              </div>
-                           </div>
-                        </div>
-                        <button class="bi bi-instagram icons"> <a href="https://www.instagram.com/just_take_the_photo45/" target="_blank" ></a></button>
-                     </div>
-                  </div> <!-- End of Navigation Bar -->
-                  <img src="architectural_City_Chicago1_y.JPG" class="d-block w-100" alt="...">
+                  </div>
+                  <img src="SPV_Campaign3_y.jpg" class="d-block w-100" alt="...">
                </div>
                <div class="carousel-item">
                   <div class="homeNav">
-                     <div class="logo">
-                        <a href="index.html">Abel's Gallery</a>
-                     </div>
-                     <a href="index.html">Home</a>
-                     <a href="gallery.html">Gallery</a>
-                     <a href="contact.html">Contact</a>
-                     <a href="about.html">About</a>
-                     <div class="socialMedia"> <!-- FIX ICONS AND MAKE LOOK NEET -->
-                        <button class="bi bi-envelope-at icons" data-bs-toggle="collapse" data-bs-target="#iconEmail" aria-expanded="false" aria-controls="button1"></button>
-                        <div style="min-height: 0px; max-width: 300px;">
-                           <div class="collapse collapse" id="iconEmail">
-                              <div class="card card-body" style="width: 200px; align-items: center;">
-                                 Abelovalle45@gmail.com
-                              </div>
-                           </div>
-                        </div>
-                        <button class="bi bi-telephone-inbound icons" data-bs-toggle="collapse" data-bs-target="#iconPhone" aria-expanded="false" aria-controls="collapseWidthExample"></button>
-                        <div style="min-height: 0px; max-width: 300px;">
-                           <div class="collapse collapse" id="iconPhone">
-                              <div class="card card-body" style="width: 150px; align-items: center;">
-                                 (210) 847-1786
-                              </div>
-                           </div>
-                        </div>
-                        <button class="bi bi-instagram icons"> <a href="https://www.instagram.com/just_take_the_photo45/" target="_blank" ></a></button>
+                     <div class="homeLogo">
+                        <a href="gallery.html">Abel's Gallery</a>
                      </div>
                   </div> <!-- End of Navigation Bar -->
                   <img src="Portrait5_y.JPG" class="d-block w-100" alt="...">
                </div>
                <div class="carousel-item">
                   <div class="homeNav">
-                     <div class="logo">
-                        <a href="index.html">Abel's Gallery</a>
+                     <div class="homeLogo">
+                        <a href="gallery.html">Abel's Gallery</a>
                      </div>
-                     <a href="index.html">Home</a>
-                     <a href="gallery.html">Gallery</a>
-                     <a href="contact.html">Contact</a>
-                     <a href="about.html">About</a>
-                     <div class="socialMedia"> <!-- FIX ICONS AND MAKE LOOK NEET -->
-                        <button class="bi bi-envelope-at icons" data-bs-toggle="collapse" data-bs-target="#iconEmail" aria-expanded="false" aria-controls="button1"></button>
-                        <div style="min-height: 0px; max-width: 300px;">
-                           <div class="collapse collapse" id="iconEmail">
-                              <div class="card card-body" style="width: 200px; align-items: center;">
-                                 Abelovalle45@gmail.com
-                              </div>
-                           </div>
-                        </div>
-                        <button class="bi bi-telephone-inbound icons" data-bs-toggle="collapse" data-bs-target="#iconPhone" aria-expanded="false" aria-controls="collapseWidthExample"></button>
-                        <div style="min-height: 0px; max-width: 300px;">
-                           <div class="collapse collapse" id="iconPhone">
-                              <div class="card card-body" style="width: 150px; align-items: center;">
-                                 (210) 847-1786
-                              </div>
-                           </div>
-                        </div>
-                        <button class="bi bi-instagram icons"> <a href="https://www.instagram.com/just_take_the_photo45/" target="_blank" ></a></button>
-                     </div>
-                  </div> <!-- End of Navigation Bar -->
-                  <img src="Portrait2_y.jpg" class="d-block w-100" alt="...">
-               </div>
-               <div class="carousel-item">
-                  <div class="homeNav">
-                     <div class="logo">
-                        <a href="index.html">Abel's Gallery</a>
-                     </div>
-                     <a href="index.html">Home</a>
-                     <a href="gallery.html">Gallery</a>
-                     <a href="contact.html">Contact</a>
-                     <a href="about.html">About</a>
-                     <div class="socialMedia"> <!-- FIX ICONS AND MAKE LOOK NEET -->
-                        <button class="bi bi-envelope-at icons" data-bs-toggle="collapse" data-bs-target="#iconEmail" aria-expanded="false" aria-controls="button1"></button>
-                        <div style="min-height: 0px; max-width: 300px;">
-                           <div class="collapse collapse" id="iconEmail">
-                              <div class="card card-body" style="width: 200px; align-items: center;">
-                                 Abelovalle45@gmail.com
-                              </div>
-                           </div>
-                        </div>
-                        <button class="bi bi-telephone-inbound icons" data-bs-toggle="collapse" data-bs-target="#iconPhone" aria-expanded="false" aria-controls="collapseWidthExample"></button>
-                        <div style="min-height: 0px; max-width: 300px;">
-                           <div class="collapse collapse" id="iconPhone">
-                              <div class="card card-body" style="width: 150px; align-items: center;">
-                                 (210) 847-1786
-                              </div>
-                           </div>
-                        </div>
-                        <button class="bi bi-instagram icons"> <a href="https://www.instagram.com/just_take_the_photo45/" target="_blank" ></a></button>
-                     </div>
-                  </div> <!-- End of Navigation Bar -->
-                  <img src="Portrait3_y.JPG" class="d-block w-100" alt="...">
-               </div>
-               <div class="carousel-item">
-                  <div class="homeNav">
-                     <div class="logo">
-                        <a href="index.html">Abel's Gallery</a>
-                     </div>
-                     <a href="index.html">Home</a>
-                     <a href="gallery.html">Gallery</a>
-                     <a href="contact.html">Contact</a>
-                     <a href="about.html">About</a>
-                     <div class="socialMedia"> <!-- FIX ICONS AND MAKE LOOK NEET -->
-                        <button class="bi bi-envelope-at icons" data-bs-toggle="collapse" data-bs-target="#iconEmail" aria-expanded="false" aria-controls="button1"></button>
-                        <div style="min-height: 0px; max-width: 300px;">
-                           <div class="collapse collapse" id="iconEmail">
-                              <div class="card card-body" style="width: 200px; align-items: center;">
-                                 Abelovalle45@gmail.com
-                              </div>
-                           </div>
-                        </div>
-                        <button class="bi bi-telephone-inbound icons" data-bs-toggle="collapse" data-bs-target="#iconPhone" aria-expanded="false" aria-controls="collapseWidthExample"></button>
-                        <div style="min-height: 0px; max-width: 300px;">
-                           <div class="collapse collapse" id="iconPhone">
-                              <div class="card card-body" style="width: 150px; align-items: center;">
-                                 (210) 847-1786
-                              </div>
-                           </div>
-                        </div>
-                        <button class="bi bi-instagram icons"> <a href="https://www.instagram.com/just_take_the_photo45/" target="_blank" ></a></button>
-                     </div>
-                  </div> <!-- End of Navigation Bar -->
-                  <img src="SPV_Campaign1_y.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <img src="Event_Sport_Soccer_y.jpg" class="d-block w-100" alt="...">
+                  </div>
                </div>
                <button class="carousel-control-prev button-featured-next" type="button"  data-bs-target="#carouselExampleFade" data-bs-slide="prev">
                   <i class="bi bi-chevron-compact-left"></i>
@@ -184,7 +53,6 @@
             </div>
          </div>
       </div>
-
    </div>
 
    <!-- Load jQuery first to prevent "uncaughtReference error" (load first to be able to use jQuery library in other js files)-->
@@ -192,9 +60,6 @@
    
    <!-- Load bootstrap second -->
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-   
-   <!-- Load custome JS files last -->
-   <script src="navIconLogic.js" type="text/javascript"></script>
 
    </body>
 </html>
