--- a/about.html
+++ b/about.html
@@ -20,7 +20,6 @@
                <div class="logo">
                   <a href="index.html">Abel's Gallery</a>
                </div>
-               <a href="index.html" class="nav-link">Home</a>
                <a href="gallery.html" class="nav-link">Gallery</a>
                <a href="contact.html" class="nav-link">Contact</a>
                <a href="about.html" class="nav-link">About</a>
@@ -41,14 +40,17 @@
                         </div>
                      </div>
                   </div>
-                  <button class="bi bi-instagram icons"> <a href="https://www.instagram.com/just_take_the_photo45/" target="_blank"></a></button>
+             <a href="https://www.instagram.com/just_take_the_photo45/" target="_blank"><button class="bi bi-instagram icons"></button></a>
                </div>
             </div>
          </div> <!-- End of Navigation Bar -->
 
-         <div class="col-10 centerAbout">
+         <div class="col-10">
             <div class="aboutContentContainer">
                <div class="aboutContent">
+               </div>   
+               <div class="profileImageContainer">
+                  <div class="aboutTextOverlay">
                   <h1 class="Heading">Abel Ovalle</h1>
                   <p>Hi, my name is Abel Ovalle! I'm a photographer located in the San Antonio
                      area. I am currently a student at Texas Lutheran University pursuing a nursing
@@ -57,8 +59,9 @@
                      a lens and have managed to capture such beautiful moments. I hope I can capture
                      your moments the same way I have learned to capture mine!
                   </p>
+                  </div>
+                  <img src="Abel_PFP_y.JPG" class="img-fluid" id="childProfileImageContainer" alt="Portrait Image">
                </div>
-               <img src="Abel_PFP_y.JPG" class="img-fluid aboutPFP" alt="Portrait Image">
             </div>
          </div>
       </div>
