--- a/gallery.html
+++ b/gallery.html
@@ -20,8 +20,7 @@
           <div class="logo">
               <a href="index.html">Abel's Gallery</a>
           </div>
-          <a href="index.html" class="nav-link">Home</a>
-          <a href="gallery.html" class="nav-link">Gallery</a>
+          <a href="gallery.html" class="nav-link-active">Gallery</a>
           <a href="contact.html" class="nav-link">Contact</a>
           <a href="about.html" class="nav-link">About</a>
           <div class="socialMedia"> <!-- FIX ICONS AND MAKE LOOK NEET -->
@@ -41,7 +40,7 @@
                 </div>
               </div>
             </div>
-            <button class="bi bi-instagram icons"> <a href="https://www.instagram.com/just_take_the_photo45/" target="_blank"></a></button>
+             <a href="https://www.instagram.com/just_take_the_photo45/" target="_blank"><button class="bi bi-instagram icons"></button></a>
           </div>
         </div>
       </div> <!-- End of Navigation Bar -->
