--- a/index.html
+++ b/index.html
@@ -23,15 +23,7 @@
                         <a href="gallery.html">Abel's Gallery</a>
                      </div>
                   </div>
-                  <img src="SPV_Campaign3_y.jpg" class="d-block w-100" alt="...">
-               </div>
-               <div class="carousel-item">
-                  <div class="homeNav">
-                     <div class="homeLogo">
-                        <a href="gallery.html">Abel's Gallery</a>
-                     </div>
-                  </div> <!-- End of Navigation Bar -->
-                  <img src="Portrait5_y.JPG" class="d-block w-100" alt="...">
+                  <img src="SPV_Campaign3_y.jpg" class="featuredImages" alt="...">
                </div>
                <div class="carousel-item">
                   <div class="homeNav">
@@ -39,7 +31,15 @@
                         <a href="gallery.html">Abel's Gallery</a>
                      </div>
                   </div>
-                  <img src="Event_Sport_Soccer_y.jpg" class="d-block w-100" alt="...">
+                  <img src="Portrait5_y.JPG" class="featuredImages" alt="...">
+               </div>
+               <div class="carousel-item">
+                  <div class="homeNav">
+                     <div class="homeLogo">
+                        <a href="gallery.html">Abel's Gallery</a>
+                     </div>
+                  </div>
+                  <img src="Event_Sport_Soccer_y.jpg" class="featuredImages" alt="...">
                   </div>
                </div>
                <button class="carousel-control-prev button-featured-next" type="button"  data-bs-target="#carouselExampleFade" data-bs-slide="prev">
