--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    <div class="container-fluid">
 
       <div class="homeBackground">
-         <div id="carouselExampleFade" class="carousel slide carousel-fade">
+         <div id="carouselExampleFade" class="carousel carousel-fade" data-bs-ride="carousel" data-bs-interval="4500" data-bs-pause="false">
             <div class="carousel-inner">
                <div class="carousel-item active">
                   <div class="homeNav">
